[gd_scene load_steps=6 format=3 uid="uid://cehbj0wwgyqcm"]

[ext_resource type="PackedScene" uid="uid://bn2f4bby2e6wb" path="res://scenes/ui/land_grid/tile_interaction_panel.tscn" id="1"]
[ext_resource type="Script" uid="uid://drw3cfya4tybr" path="res://scenes/ui/land_grid/land_view_panel.gd" id="1_1vomj"]
[ext_resource type="PackedScene" uid="uid://be338px6n6hy4" path="res://scenes/ui/land_grid/world_view_panel.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/ui/land_grid/tile_info_panel.tscn" id="4"]
[ext_resource type="Script" uid="uid://13lc4m1o0ppa" path="res://scenes/ui/land_grid/tile_info_panel.gd" id="5_1jnom"]

[node name="LandViewPanel" type="HSplitContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_1vomj")

[node name="TileInteractionPanel" parent="." instance=ExtResource("1")]
layout_mode = 2

[node name="MiddleRightSplit" type="HSplitContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WorldViewPanel" parent="MiddleRightSplit" instance=ExtResource("2")]
layout_mode = 2

[node name="TileInfoPanel" parent="MiddleRightSplit" instance=ExtResource("4")]
layout_mode = 2
size_flags_horizontal = 8
script = ExtResource("5_1jnom")
